--- a/planner/templates/planner/event_confirm_delete.html
+++ b/planner/templates/planner/event_confirm_delete.html
@@ -1,6 +1,6 @@
-{# Template: event_confirm_delete.html
+<!-- Template: event_confirm_delete.html
    Purpose: Confirmation page for deleting an event.
-   Inherits base.html and shows a yes/no confirmation form. #}
+   Inherits base.html and shows a yes/no confirmation form. -->
 
 {% extends "planner/base.html" %}
 {% block title %}Delete event – MyPlanner{% endblock %}
