--- a/planner/templates/planner/event_form.html
+++ b/planner/templates/planner/event_form.html
@@ -1,6 +1,6 @@
-{# Template: event_form.html
+<!-- Template: event_form.html
    Purpose: Edit form for an existing event.
-   Inherits base.html and provides start/end inputs with save/back actions. #}
+   Inherits base.html and provides start/end inputs with save/back actions. -->
 
 {% extends "planner/base.html" %}
 {% block title %}Edit event – MyPlanner{% endblock %}
