--- a/planner/templates/planner/filters.html
+++ b/planner/templates/planner/filters.html
@@ -1,6 +1,6 @@
-{# Template: filters.html
+<!--  Template: filters.html
    Purpose: Task filtering page with form inputs (search, list, priority, done, tags)
-   and a results table. Extends base.html and highlights Filters in the navigation. #}
+   and a results table. Extends base.html and highlights Filters in the navigation. -->
 
 {% extends "planner/base.html" %}
 {% load static planner_extras %}
