--- a/planner/templates/planner/home.html
+++ b/planner/templates/planner/home.html
@@ -1,6 +1,6 @@
-{# Template: home.html
+<!-- Template: home.html
    Purpose: Landing page for MyPlanner.
-   Provides hero section with CTA and features overview. #}
+   Provides hero section with CTA and features overview. -->
 
 {% extends "planner/base.html" %}
 {% load static %}
