--- a/planner/templates/planner/settings.html
+++ b/planner/templates/planner/settings.html
@@ -1,5 +1,5 @@
-{# Template: settings.html
-   Purpose: Settings page to manage user tags (bulk delete with select-all helper). #}
+<!-- Template: settings.html
+   Purpose: Settings page to manage user tags (bulk delete with select-all helper). -->
 
 {% extends "planner/base.html" %}
 {% load static %}
