--- a/planner/templates/planner/task_confirm_delete.html
+++ b/planner/templates/planner/task_confirm_delete.html
@@ -1,6 +1,6 @@
-{# Template: task_confirm_delete.html
+<!-- {# Template: task_confirm_delete.html
    Purpose: Confirmation page for deleting a task.
-   Provides a prompt and form with delete and back actions. #}
+   Provides a prompt and form with delete and back actions. -->
 
 {% extends "planner/base.html" %}
 {% load static %}
