--- a/planner/templates/planner/task_detail.html
+++ b/planner/templates/planner/task_detail.html
@@ -1,6 +1,6 @@
-{# Template: task_detail.html
+<!-- Template: task_detail.html
    Purpose: Detailed view of a single task.
-   Displays task info, reminders, optional event, and comments with add/delete functionality. #}
+   Displays task info, reminders, optional event, and comments with add/delete functionality. -->
 
 {% extends "planner/base.html" %}
 {% load static %}
