--- a/planner/templates/planner/task_form.html
+++ b/planner/templates/planner/task_form.html
@@ -1,7 +1,7 @@
-{# Template: task_form.html
+<!--  Template: task_form.html
    Purpose: Create/edit form for a task.
    Includes title, description, due date, priority, tags (chips + new),
-   completion flag, and list selector. #}
+   completion flag, and list selector. -->
 
 {% extends "planner/base.html" %}
 {% load static %}
