--- a/planner/templates/planner/task_list.html
+++ b/planner/templates/planner/task_list.html
@@ -1,6 +1,6 @@
-{# Template: task_list.html
+<!--  Template: task_list.html
    Purpose: List view of all tasks.
-   Displays tasks with list, tags, priority, due date, completion toggle, and action links. #}
+   Displays tasks with list, tags, priority, due date, completion toggle, and action links. -->
 
 {% extends "planner/base.html" %}
 {% block nav_tasks %}is-active{% endblock %}
