--- a/planner/templates/planner/typelist_confirm_delete.html
+++ b/planner/templates/planner/typelist_confirm_delete.html
@@ -1,6 +1,6 @@
-{# Template: typelist_confirm_delete.html
+<!--  Template: typelist_confirm_delete.html
    Purpose: Confirmation page for deleting a task list.
-   Asks user for confirmation and provides delete/back actions. #}
+   Asks user for confirmation and provides delete/back actions. -->
 
 {% extends "planner/base.html" %}
 {% load static %}
