--- a/planner/templates/planner/typelist_form.html
+++ b/planner/templates/planner/typelist_form.html
@@ -1,6 +1,6 @@
-{# Template: typelist_form.html
+<!--  Template: typelist_form.html
    Purpose: Form for creating or editing a to-do list.
-   Renders fields and provides Save/Create with Back navigation. #}
+   Renders fields and provides Save/Create with Back navigation. -->
 
 {% extends "planner/base.html" %}
 {% block nav_lists %}is-active{% endblock %}
