--- a/planner/templates/planner/typelist_list.html
+++ b/planner/templates/planner/typelist_list.html
@@ -1,6 +1,6 @@
-{# Template: typelist_list.html
+<!--  Template: typelist_list.html
    Purpose: List view of all to-do lists.
-   Displays each list with task count and action links (add task, edit, delete). #}
+   Displays each list with task count and action links (add task, edit, delete). -->
 
 {% extends "planner/base.html" %}
 {% block nav_lists %}is-active{% endblock %}
